--- a/apps/Templates/signin.html
+++ b/apps/Templates/signin.html
@@ -4,15 +4,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Form-v2 by Colorlib</title>
-	<!-- Mobile Specific Metas -->
+	<title>Signin</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-
-
 	<link rel="stylesheet" href="https://jqueryvalidation.org/files/demo/site-demos.css">
-
-    <link rel="stylesheet" href="{% static 'css/stylea.css'%}"/>
+       
+	<link rel="stylesheet" href="{% static 'css/stylea.css'%}"/>
+	
 </head>
 <body class="form-v2">
 	<div class="page-content">
@@ -21,7 +19,7 @@
 
 			</div>
 			<form  method="post" action=" " class="form-detail" id="myform">
-{% csrf_token %}
+                         {% csrf_token %}
 				<h2>Sign in</h2>
 				<div class="form-row">
 					<label for="username">Username:</label>
