--- a/apps/Templates/signup.html
+++ b/apps/Templates/signup.html
@@ -4,8 +4,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Form-v2 by Colorlib</title>
-	<!-- Mobile Specific Metas -->
+	<title>Signup</title>
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<link rel="stylesheet" type="text/css" href="css/roboto-font.css">
@@ -22,7 +22,7 @@
 
 			</div>
 			<form  method="post" action=" " class="form-detail" id="myform">
-{% csrf_token %}
+                          {% csrf_token %}
 				<h2>Sign up</h2>
 				<div class="form-row">
 					<label for="username">Username:</label>
