--- a/apps/Templates/cart.html
+++ b/apps/Templates/cart.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Name</title>
+    <title>Cart</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
     <script src="{% static 'css/jquery.js' %}"></script>
     <script src="{% static 'css/bootstrap.min.js' %}"></script>
@@ -170,8 +170,6 @@
            </div>
         </div>
     </div>
-
-
 
 
 {% endif %}
